added menu page and food and drink sections

--- a/menu.html
+++ b/menu.html
@@ -27,93 +27,190 @@
             <a href="#">Contact</a>
         </nav>
     </header>
-    <main class="menu">
-        <div class="starters">
-            <h1>Starters</h1>
-            <ul>
-                <li>
-                    <h3>BBQ Plate</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-                </li>
-                <li>
-                    <h3>BBQ Plate</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-                </li>
-                <li>
-                    <h3>BBQ Plate</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-                </li>
-                <li>
-                    <h3>BBQ Plate</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-                </li>
-                <li>
-                    <h3>BBQ Plate</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-                </li>
-                <li>
-                    <h3>BBQ Plate</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-                </li>
-            </ul>
+    <main>
+        <div class="menu">
+            <div>
+                <div class="starters">
+                    <h1>Food</h1>
+                    <h2>Starters</h2>
+                    <ul>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="lunch">
+                    <h2>Lunch</h2>
+                    <ul>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="dinner">
+                    <h2>Dinner</h2>
+                    <ul>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div class="lunch">
-            <h1>Lunch</h1>
-            <ul>
-                <li>
-                    <h3>BBQ Plate</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-                </li>
-                <li>
-                    <h3>BBQ Plate</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-                </li>
-                <li>
-                    <h3>BBQ Plate</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-                </li>
-                <li>
-                    <h3>BBQ Plate</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-                </li>
-                <li>
-                    <h3>BBQ Plate</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-                </li>
-                <li>
-                    <h3>BBQ Plate</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-                </li>
-            </ul>
-        </div>
-        <div class="dinner">
-            <h1>Dinner</h1>
-            <ul>
-                <li>
-                    <h3>BBQ Plate</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-                </li>
-                <li>
-                    <h3>BBQ Plate</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-                </li>
-                <li>
-                    <h3>BBQ Plate</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-                </li>
-                <li>
-                    <h3>BBQ Plate</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-                </li>
-                <li>
-                    <h3>BBQ Plate</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-                </li>
-                <li>
-                    <h3>BBQ Plate</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-                </li>
-            </ul>
+        <div class="menu drinks">
+            <div>
+                <div class="starters">
+                    <h1>Drinks</h1>
+                    <h2>Starters</h2>
+                    <ul>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="lunch">
+                    <h2>Lunch</h2>
+                    <ul>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="dinner">
+                    <h2>Dinner</h2>
+                    <ul>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                        <li>
+                            <h3>BBQ Plate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
