--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav class="nav">
-            <a href="" class="logo">Name</a>
+            <a href="" class="logo">Name of Restaurant</a>
             <a href="index.html" class="links">Home</a>
             <a href="menu.html" class="links">Menu</a>
             <a href="" class="links">Our Story</a>
@@ -35,7 +35,8 @@
     </header>
     <main class="content">
         <section class="intro">
-            <h1>The Ninety Nine Restaurant offers a great tasting menu to its customers, depending on their varied tastes. From seafood to dessert to Mexican food, everything looks really delicious. Among the Ninety Nine Restaurant’s menu.</h1>
+            <h1>Fresh. Bold. Inspiring.</h1>
+            <p>The Ninety Nine Restaurant offers a great tasting menu to its customers, depending on their varied tastes. From seafood to dessert to Mexican food, everything looks really delicious. Among the Ninety Nine Restaurant’s menu.</p>
         </section>
         <section class="block">
             <div class="text">
@@ -48,7 +49,7 @@
             <div class="img img1">
             </div>
         </section>
-        <section class="block block-odd">
+        <section class="block block-even">
             <div class="img img2">
             </div>
             <div class="text">
