deleted dropdown menu

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
             <a href="" class="logo">Name of Restaurant</a>
             <a href="index.html" class="links">Home</a>
             <a href="menu.html" class="links">Menu</a>
-            <a href="" class="links">Our Story</a>
-            <a href="" class="links">Contact</a>
+            <a href="story.html" class="links">Our Story</a>
+            <a href="contact.html" class="links">Contact</a>
             <button class="button" onclick="openNav()">&equiv;</button>
         </nav>
         <nav id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="#">Home</a>
-            <a href="#">Menu</a>
-            <a href="#">Our Story</a>
-            <a href="#">Contact</a>
+            <a href="index.html">Home</a>
+            <a href="menu.html">Menu</a>
+            <a href="story.html">Our Story</a>
+            <a href="contact.html">Contact</a>
         </nav>
         <div class="video">
             <video playsinline autoplay muted loop poster="Walking-Heads.jpg" id="vid">
@@ -75,26 +75,20 @@
             <div class="catering">
                 <h3>Catering</h3>
                 <img src="img/food1.jpg">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
             </div>
             <div class="events">
                 <h3>Events</h3>
                 <img src="img/food2.jpg">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
             </div>
             <div class="drinks">
                 <h3>Drinks</h3>
                 <img src="img/food3.jpg">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
             </div>
         </section>
     </main>
