--- a/menu.html
+++ b/menu.html
@@ -21,10 +21,10 @@
         </nav>
         <nav id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="#">Home</a>
-            <a href="#">Menu</a>
-            <a href="#">Our Story</a>
-            <a href="#">Contact</a>
+            <a href="index.html">Home</a>
+            <a href="menu.html">Menu</a>
+            <a href="story.html">Our Story</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
     <main>
