added menu buttons

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Restaurant</title>
+    <title>HodgePodge</title>
     <link rel="stylesheet" type="text/css" href="css/src.css">
     <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav class="nav">
-            <a href="" class="logo">Name of Restaurant</a>
+            <a href="" class="logo">HodgePodge</a>
             <a href="index.html" class="links">Home</a>
             <a href="menu.html" class="links">Menu</a>
             <a href="story.html" class="links">Our Story</a>
